[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/enemies/hell_hound/HellHound.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/hell_hound/sprites/hell-hound-idle.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/hell_hound/sprites/hell-hound-walk.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WalkSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/WalkSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/WalkSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 12 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 22, 12 )

[node name="HellHound" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="IdleSprite" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="WalkSprite" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 3 )
hframes = 12
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="PlayerHit" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHit"]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="RayCasts" type="Node2D" parent="."]
editor/display_folded = true

[node name="GroundRayCast" type="RayCast2D" parent="RayCasts"]
position = Vector2( -21, 0 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 4
[connection signal="animation_finished" from="HitAnimationPlayer" to="." method="_on_HitAnimationPlayer_animation_finished"]
[connection signal="body_entered" from="PlayerHit" to="." method="_on_PlayerHit_body_entered"]
